--- a/2_formulation.tex
+++ b/2_formulation.tex
@@ -62,4 +62,4 @@ Thus we can classify traffic assignment problems into two broad categories: thos
 \item \textit{permissive left turns}: At intersections, vehicles are often allowed to turn left through gaps in oncoming traffic. When the flow of oncoming traffic is large, then these gaps are rare, and vehicles must wait longer to turn. However, because the oncoming traffic has the right-of-way, their travel times are not impacted by the number of vehicles waiting to turn left. 
 \item \textit{backward propagation of congestion}: One of the essential features of traffic dynamics is that regions of high density propagate upstream. Consider two paths $p$ and $p'$ that cross at an intersection. Paths $p$ is nearly empty, but $p'$ is congested up to the intersection. An additional vehicle on $p'$ will block the intersection, and thus obstruct vehicles on $p$, but an additional vehicle on $p$ has no effect on $p'$.
 \end{enumerate}
-A second level of classification relates to whether the function $F$ is static or dynamic. Within optimization-based traffic assignment, these two types have naturally been treated using the techniques of mathematical programming and optimal control respectively. If the function \XXX is monotonic (strictly monotonic), the optimization problems are ... convex (strictly convex).
+A second level of classification relates to whether the function $F$ is static or dynamic. Within optimization-based traffic assignment, these two types have naturally been treated using the techniques of mathematical programming and optimal control respectively. If the function $F(h)$ is monotone (strictly monotone), then $f(h)$ is convex (strictly convex).
