--- a/citation.bib
+++ b/citation.bib
@@ -1,3 +1,13 @@
+
+@article{rootlocus,
+  title={Root Locus Technique},
+  author={Kuo, Benjamin C.},
+  journal={Automatic Control Systems},
+  pages={329–388,},
+  year={1967},
+  publisher={Prentice-Hall}
+}
+
 @article{nie2010solving,
   title={Solving the dynamic user optimal assignment problem considering queue spillback},
   author={Nie, Yu Marco and Zhang, H Michael},
